labs/k8s-for-frontend/post-3/results/iptables-anatomy.txt
# measured at 2026-08-06 13:43:43, node=k8s-fe-lab-worker, ClusterIP=10.96.35.226, replicas=3
--- kube-proxy mode
mode: iptables
--- iptables version (kind node)
iptables v1.8.11 (nf_tables)

--- [1] KUBE-SERVICES에서 우리 Service의 진입 규칙
-A KUBE-SERVICES -d 10.96.35.226/32 -p tcp -m comment --comment "default/k8s-fe-lab cluster IP" -m tcp --dport 80 -j KUBE-SVC-ISVZ3COTGREXVRO2

--- [2] KUBE-SVC-ISVZ3COTGREXVRO2: 확률 캐스케이드
-A KUBE-SVC-ISVZ3COTGREXVRO2 ! -s 10.244.0.0/16 -d 10.96.35.226/32 -p tcp -m comment --comment "default/k8s-fe-lab cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-ISVZ3COTGREXVRO2 -m comment --comment "default/k8s-fe-lab -> 10.244.1.12:3000" -m statistic --mode random --probability 0.33333333349 -j KUBE-SEP-FRMIQDBY5TTCZ5G3
-A KUBE-SVC-ISVZ3COTGREXVRO2 -m comment --comment "default/k8s-fe-lab -> 10.244.1.13:3000" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-DIIQGOM6OBXKX6MD
-A KUBE-SVC-ISVZ3COTGREXVRO2 -m comment --comment "default/k8s-fe-lab -> 10.244.2.11:3000" -j KUBE-SEP-5SCZPP47RXDJDPM7

--- [3] KUBE-SEP-* : 파드로의 DNAT
-A KUBE-SEP-FRMIQDBY5TTCZ5G3 -p tcp -m comment --comment "default/k8s-fe-lab" -m tcp -j DNAT --to-destination 10.244.1.12:3000
-A KUBE-SEP-DIIQGOM6OBXKX6MD -p tcp -m comment --comment "default/k8s-fe-lab" -m tcp -j DNAT --to-destination 10.244.1.13:3000
-A KUBE-SEP-5SCZPP47RXDJDPM7 -p tcp -m comment --comment "default/k8s-fe-lab" -m tcp -j DNAT --to-destination 10.244.2.11:3000

--- [4] NAT 테이블 전체에서 ICMP를 매칭하는 규칙 수
icmp match count: 0
tcp/udp dport match count: 18

--- [5] 같은 규칙을 nft로 보면 (iptables-nft 호환 계층)
# Warning: table ip nat is managed by iptables-nft, do not touch!
table ip nat {
	chain KUBE-SERVICES {
		meta l4proto tcp ip daddr 10.96.0.1  tcp dport 443 counter packets 0 bytes 0 jump KUBE-SVC-NPX46M4PTMTKRN6Y
		meta l4proto udp ip daddr 10.96.0.10  udp dport 53 counter packets 3 bytes 248 jump KUBE-SVC-TCOU7JCQXEZGVUNU
		meta l4proto tcp ip daddr 10.96.0.10  tcp dport 53 counter packets 0 bytes 0 jump KUBE-SVC-ERIFXISQEP7F7OF4
		meta l4proto tcp ip daddr 10.96.0.10  tcp dport 9153 counter packets 0 bytes 0 jump KUBE-SVC-JD5MR3NA4I4DYORP
		meta l4proto tcp ip daddr 10.96.113.96  tcp dport 443 counter packets 0 bytes 0 jump KUBE-SVC-Z4ANX4WAEWEBLCTM
